[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/objects/delivery.gd" type="Script" id=1]
[ext_resource path="res://src/art/hands_goblin.png" type="Texture" id=2]
[ext_resource path="res://src/art/spotlight_5.png" type="Texture" id=3]
[ext_resource path="res://src/art/shroom.png" type="Texture" id=4]
[ext_resource path="res://src/art/mushroom_MUSH.png" type="Texture" id=5]
[ext_resource path="res://src/art/spotlight_1.png" type="Texture" id=6]
[ext_resource path="res://src/art/eyeball_MUSH.png" type="Texture" id=7]
[ext_resource path="res://src/art/lizard_MUSH.png" type="Texture" id=8]
[ext_resource path="res://src/art/crystal_MUSH.png" type="Texture" id=9]
[ext_resource path="res://src/art/plant_MUSH.png" type="Texture" id=10]
[ext_resource path="res://src/art/crystal.png" type="Texture" id=11]
[ext_resource path="res://src/art/plant.png" type="Texture" id=12]
[ext_resource path="res://src/art/eyeball.png" type="Texture" id=13]
[ext_resource path="res://src/art/lizard.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 120, 183.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 12 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 4 ), null, null, null, null, null, ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Pestle"
length = 3.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.001, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1000 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.264045, 0.670455 ), 0.0, 0.0, 0, 0, Vector2( 0.994382, 0.297727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 200, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.52
angular_velocity = 114.05
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_random = 0.13
scale_curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 200, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.52
angular_velocity = 114.05
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_random = 0.13
scale_curve = SubResource( 8 )

[node name="Delivery" type="RigidBody2D"]
collision_mask = 4097
mode = 1
script = ExtResource( 1 )
process_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -79.5 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="Delivery" type="Sprite" parent="Node2D"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="IngredientSprite" type="AnimatedSprite" parent="Node2D/Delivery"]
position = Vector2( -6.08731, 11.125 )
rotation = -0.575949
scale = Vector2( 0.370954, 0.370954 )
frames = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Delivery"]
anims/Pestle = SubResource( 5 )

[node name="RightHand" type="Node2D" parent="Node2D"]
position = Vector2( -75, 0 )

[node name="LeftHand" type="Node2D" parent="Node2D"]
position = Vector2( 75, 0 )

[node name="GoodParticles" type="Particles2D" parent="."]
modulate = Color( 0, 1, 0.0627451, 0.364706 )
material = SubResource( 9 )
position = Vector2( 1, 1 )
emitting = false
amount = 20
one_shot = true
explosiveness = 0.13
process_material = SubResource( 11 )
texture = ExtResource( 3 )

[node name="BadParticles" type="Particles2D" parent="."]
modulate = Color( 1, 0, 0, 0.364706 )
material = SubResource( 9 )
position = Vector2( 1, 1 )
emitting = false
amount = 20
one_shot = true
explosiveness = 0.71
process_material = SubResource( 12 )
texture = ExtResource( 6 )

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
